--- a/ProjetoAplicativo/www/index.html
+++ b/ProjetoAplicativo/www/index.html
@@ -1,26 +1,15 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="msapplication-tap-highlight" content="no">
-    <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
-    <meta name="color-scheme" content="light dark">
-    <link rel="stylesheet" href="css/index.css">
-    <title> Área de Login </title>
-</head>
-
-<body>
-    <div class="Foto">
-        <center>
-        <button type="button" id="TirarFoto"> Tirar Foto </button>
-        <br> <br>
-        <img src="" height="40" width="50" id="Foto" alt="FotoTirada">
-    </center>
-    </div>
-    <script src="cordova.js"></script>
-    <script src="js/index.js"></script>
-</body>
-
+    <head>
+        <title>Cordova Camera</title>
+    </head>
+    <body>
+        <div class="app">
+            <h1>Cordova Camera</h1>
+            <button type="button" id="btnTirarFoto">Tirar foto</button>
+            <img src="" height="200" width="300" id="imgHtmlTag" alt="aguardando img"></img>
+        </div>
+        <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
+    </body>
 </html>
